# ex-cod-tg

./: .env.example  .gitignore  CHANGELOG.md  README.md  install.sh  pyproject.toml  requirements.txt  start
.agents_dev/: README.md
bot/: app_paths.py  bootstrap.py  cli.py  codex_runner.py  config.py  config_store.py  conversation_store.py  handlers.py  launchd.py  main.py  security.py  systemd.py  tray.py  ui.py  update_notice_store.py  version.py  workspaces.py
tests/: test_codex_execution_mode.py  test_status_resilience.py
utils/: formatter.py
